scrollbarre probleme resolved

--- a/client/src/app/components/tile/tile.component.scss
+++ b/client/src/app/components/tile/tile.component.scss
@@ -23,8 +23,8 @@
     font-family: 'Courier New';
     font-weight: bold;
     position: relative;
-    top: 5px;
-    left: 15px;
+    display: flex;
+    justify-content: center;
 }
 
 .tileEmpty {
